osc/maxcert_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: maxcert
    well-known: acme-challenge
  name: maxcert
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: maxcert
  sessionAffinity: None
  type: ClusterIP
